# eml-cost-torch

./: .gitignore  .graphifyignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md
bench/architectures/: bert-base.json  gpt2.json  profile_architectures.py  reproduce.ipynb  resnet-50.json  summary.json  vit-b-16.json
src/eml_cost_torch/: __init__.py  classify.py  diagnose.py  profile.py  registry.py  summary.py
src/eml_cost_torch/data/: activation_empirical_basis.json
tests/: test_classify.py  test_diagnose.py  test_profile.py  test_registry.py  test_summary.py
