[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-cost-torch"
version = "0.5.0"
description = "Per-layer Pfaffian profile and EML routing depth for any torch.nn.Module."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PROPRIETARY-PRE-RELEASE" }
authors = [
    { name = "Monogate Research" },
]
keywords = [
    "pytorch",
    "torch",
    "deep-learning",
    "complexity-analysis",
    "pfaffian",
    "symbolic-computation",
    "eml-cost",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "eml-cost>=0.6.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "torch>=2.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://monogate.org"
Repository = "https://github.com/almaguer1986/eml-cost-torch"
Issues = "https://github.com/almaguer1986/eml-cost-torch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eml_cost_torch = ["py.typed", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
